WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284611
Try to fix the visionOS build after
287782@main
https://bugs.webkit.org/show_bug.cgi?id=284611
Summary
Try to fix the visionOS build after 287782@main
Andy Estes
Reported
2024-12-12 22:31:35 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-12-12 22:31:36 PST
<
rdar://problem/141417506
>
Andy Estes
Comment 2
2024-12-12 22:32:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37893
EWS
Comment 3
2024-12-12 23:26:08 PST
Committed
287785@main
(adc738012116): <
https://commits.webkit.org/287785@main
> Reviewed commits have been landed. Closing PR #37893 and removing active labels.
Alexey Proskuryakov
Comment 4
2024-12-13 13:48:25 PST
***
Bug 284610
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug