Try to fix the visionOS build after 287782@main https://bugs.webkit.org/show_bug.cgi?id=284611 rdar://141417506

Unreviewed build fix. Partially reverted changes from 287782@main that landed unintentionally.

* Source/WebKit/ModelProcess/ModelProcess.cpp:
(WebKit::ModelProcess::initializeModelProcess):
* Source/WebKit/ModelProcess/ModelProcessCreationParameters.h:
* Source/WebKit/ModelProcess/ModelProcessCreationParameters.serialization.in:

Canonical link: https://commits.webkit.org/287785@main