Source/WebKit/ModelProcess/ModelProcessCreationParameters.h
@@ -34,6 +34,7 @@ namespace WebKit {
 
 struct ModelProcessCreationParameters {
     AuxiliaryProcessCreationParameters auxiliaryProcessParameters;
+    ProcessID parentPID;
     String applicationVisibleName;
 };
 
